--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -13,10 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: Bumps version and updates package in PyPI
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+        key: ${{ secrets.GITHUB_TOKEN }}
+        name: "Wyatt Sell"
+        email: "profwyattb@gmail.com"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -27,5 +30,6 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python -m bumpversion patch .bumpversion.cfg
+        git push origin master --tags
         python setup.py sdist bdist_wheel
         twine upload dist/*
