--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-        key: ${{ secrets.GITHUB_TOKEN }}
+        key: ${{ secrets.GIT_TOKEN }}
         name: "Wyatt Sell"
         email: "profwyattb@gmail.com"
     - name: Install dependencies
