--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,19 +17,24 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-        key: ${{ secrets.GIT_TOKEN }}
-        name: "Wyatt Sell"
-        email: "profwyattb@gmail.com"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine bumpversion
-    - name: Build and publish
+    - name: Config git
+      run: |
+        git config --local user.email "profwyatt@gmail.com"
+        git config --local user.name "Wyatt Sell"
+    - name: Bump version
+      run: |
+        python -m bumpversion patch .bumpversion.cfg
+    - name: Push changes
+      run: |
+        git push origin master --tags
+    - name: Push to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python -m bumpversion patch .bumpversion.cfg
-        git push origin master --tags
         python setup.py sdist bdist_wheel
         twine upload dist/*
