--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,36 +5,36 @@ name: Upload Python Package
 
 on:
   push:
-    branches: 
+    branches:
       - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Bumps version and updates package in PyPI
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine bumpversion
-    - name: Config git
-      run: |
-        git config --local user.email "profwyatt@gmail.com"
-        git config --local user.name "Wyatt Sell"
-    - name: Bump version
-      run: |
-        python -m bumpversion patch .bumpversion.cfg
-    - name: Push changes
-      run: |
-        git push origin master --tags
-    - name: Push to PyPI
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
+      - uses: actions/checkout@v2
+      - name: Bumps version and updates package in PyPI
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine bumpversion
+      - name: Config git
+        run: |
+          git config --local user.email "profwyatt@gmail.com"
+          git config --local user.name "Wyatt Sell"
+      - name: Bump version
+        run: |
+          python -m bumpversion patch .bumpversion.cfg
+      - name: Push changes
+        run: |
+          git push origin master --tags
+      - name: Push to PyPI
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
